<resources>
    <string name="app_name">BookNest</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="username">Username</string>
    <string name="already_registered_log_in_here">ALREADY REGISTERED? LOG IN HERE</string>
    <string name="create_new_accoun">CREATE NEW ACCOUN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back_book_lover">Welcome Back, Book Lover!</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="what_can_you_do">What can you do?</string>
    <string name="how_to_get_started">How to get started?</string>
    <string name="why_use_this_app">Why use this app?</string>
    <string name="easy_to_use_interface_n_personalized_book_management_n_community_driven_book_reviews_n_secure_and_private_book_tracking">✓ Easy-to-use interface\n✓ Personalized book management\n✓ Community-driven book reviews\n✓ Secure and private book tracking</string>
    <string name="back">Back</string>
    <string name="about_the_app">About the App</string>
    <string name="show_all">Show All</string>
    <string name="sci_fi">🚀 Sci-Fi</string>
    <string name="drama">🎭 Drama</string>
    <string name="non_fiction">📚 Non-fiction</string>
    <string name="self_help">💡 Self-Help</string>
    <string name="romance">💙 Romance</string>
    <string name="hello_username">HELLO, [USERNAME]!</string>
    <string name="hello_guest">HELLO, Guest!</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_language">Select Language</string>
    <string name="logout">Logout</string>
    <string name="hello_books_lover">Hello Books Lover!</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hello">Hello</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="error_loading_books">Error loading books: </string>
    <string name="api_error">API Error: </string>
    <string name="my_library">My Library</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="support">SUPPORT</string>
    <string name="library">LIBRARY</string>
    <string name="no_books_in_your_reading_list">No books in your reading list</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="organize_your_personal_library_n_write_and_read_book_reviews_n_create_a_wishlist_of_books_n_purchase_books_easily">- organize your personal library\n- write and read book reviews\n- create a wishlist of books\n- purchase books easily</string>
    <string name="_1_sign_up_for_an_account_n2_browse_and_add_books_to_your_library_n3_write_reviews_and_share_thoughts_n4_enjoy_your_personalized_book_collection">1. sign up for an account\n2. browse and add books to your library\n3. write reviews and share thoughts\n4. enjoy your personalized book collection</string>
</resources>