<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- LIBRARY Section -->
    <group android:id="@+id/group_library">
        <item
            android:id="@+id/nav_library"
            android:title="@string/library"
            android:enabled="false"/>

        <item
            android:id="@+id/nav_my_library"
            android:icon="@drawable/library"
            android:title="@string/my_library" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/fav"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/shopping_cart" />
    </group>

    <!-- SUPPORT Section -->
    <group android:id="@+id/group_support">
        <item
            android:id="@+id/nav_support"
            android:title="@string/support"
            android:enabled="false"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/back"
            android:title="@string/logout" />
    </group>
</menu>

