<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/bobby_jones"
        android:text="@string/hello_books_lover"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/transparent_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:contentDescription="@string/login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/bobby_jones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/transparent_button"
        android:text="@string/sign_up"
        android:contentDescription="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/bobby_jones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />


    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/bobby_jones"
        android:text="@string/about_the_app"
        android:contentDescription="@string/about_the_app"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <View
        android:id="@+id/line_about"
        android:layout_width="200dp"
        android:layout_height="4dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
